- Actualizacion de COmpromiso Anual - Modificaciones de Compromiso Anual (Ampliaciones, Rebajas y Anulaciones)

--- a/iafas/src/main/webapp/css/estilos.css
+++ b/iafas/src/main/webapp/css/estilos.css
@@ -66,3 +66,14 @@
     color: #C82A2A;
      font-size: 15px;
 }
+
+.outLabelMonto{
+    font-weight: bold;
+    text-align: right;
+    color: black;
+    left: 0;
+    display: block;
+    border-radius: 5px 5px 5px 5px;
+    background-color: #8cd98c;
+    padding: 3px;
+}
