--- a/iafas/src/main/webapp/material_able-main/assets/css/style.css
+++ b/iafas/src/main/webapp/material_able-main/assets/css/style.css
@@ -376,7 +376,7 @@ code {
 
 .pcoded .card.card-load .card-loader i {
 	margin: 0 auto;
-	color: #448aff;
+	color: #404040; /* #448aff;*/
 	font-size: 20px;
 }
 
@@ -6423,7 +6423,8 @@ body[themebg-pattern="theme1"] {
 }
 
 .pcoded .pcoded-navbar[active-item-theme="theme1"] .pcoded-item li:hover>a {
-	color: #448aff !important;
+	/*color: #448aff !important;*/
+	color: #82965f !important;
 }
 
 .pcoded .pcoded-navbar[active-item-theme="theme1"] .pcoded-item li:hover>a .pcoded-micon {
@@ -6516,7 +6517,7 @@ body[themebg-pattern="theme1"] {
 }
 
 .pcoded .pcoded-header[header-theme="theme1"] {
-	background: #448aff;
+	background: #404040;
 }
 
 .pcoded .pcoded-header[header-theme="theme1"] .input-group-addon,
@@ -9542,7 +9543,7 @@ span.badge {
 .label-inverse-success {
 	border: 1px solid;
 	border-color: #11c15b;
-	color: #11c15b !important;
+	color: #324d02 !important;
 	font-size: 20px;
 }
 
